tests/snapshots/snapshots__pipeline@named_unknown.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/named_unknown.pr
---
== tokens ==
VOpen Fn Ident("f") LParen Ident("a") Comma Ident("b") ColonEq Int(IntLit { value: 0, suffix: None }) RParen Eq Ident("a") Plus Ident("b") VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("f") LParen Ident("a") ColonEq Int(IntLit { value: 1, suffix: None }) Comma Ident("z") ColonEq Int(IntLit { value: 2, suffix: None }) RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "f",
            params: [
                Param {
                    name: "a",
                    ty: None,
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "b",
                    ty: None,
                    borrow: false,
                    default: Some(
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 0,
                                    suffix: None,
                                },
                            ),
                            span: 67..68,
                        },
                    ),
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Bin(
                    Add,
                    Spanned {
                        node: Var(
                            "a",
                        ),
                        span: 72..73,
                    },
                    Spanned {
                        node: Var(
                            "b",
                        ),
                        span: 76..77,
                    },
                ),
                span: 72..77,
            },
            wheres: [],
            span: 54..77,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 91..98,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "f",
                                    ),
                                    span: 99..100,
                                },
                                [
                                    Spanned {
                                        node: Sugar(
                                            Assign(
                                                "a",
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 106..107,
                                                },
                                            ),
                                        ),
                                        span: 101..107,
                                    },
                                    Spanned {
                                        node: Sugar(
                                            Assign(
                                                "z",
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 2,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 114..115,
                                                },
                                            ),
                                        ),
                                        span: 109..115,
                                    },
                                ],
                            ),
                            span: 99..116,
                        },
                    ],
                ),
                span: 91..117,
            },
            wheres: [],
            span: 79..117,
        },
    ],
}

== types ==
[E6054] Type Error: `f` has no parameter `z`
   ╭─[ <source>:5:31 ]
   │
 5 │ fn main() = println(f(a := 1, z := 2))
   │                               ───┬──  
   │                                  ╰──── `f` has no parameter `z`
   │ 
   │ Help: did you mean `a` or `b`?
───╯
