tests/snapshots/snapshots__pipeline@neg_unsigned.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/neg_unsigned.pr
---
== tokens ==
VOpen Fn Ident("main") LParen RParen Colon KwUnit Bang LBrace UIdent("IO") RBrace Eq VOpen Let Ident("x") Eq Minus Int(IntLit { value: 5, suffix: U64 }) VSemi Ident("println") LParen Int(IntLit { value: 1, suffix: None }) RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "IO",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Let(
                    "x",
                    Spanned {
                        node: Neg(
                            Spanned {
                                node: Int(
                                    IntLit {
                                        value: 5,
                                        suffix: U64,
                                    },
                                ),
                                span: 163..167,
                            },
                        ),
                        span: 162..167,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 170..177,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 1,
                                            suffix: None,
                                        },
                                    ),
                                    span: 178..179,
                                },
                            ],
                        ),
                        span: 170..180,
                    },
                ),
                span: 154..180,
            },
            wheres: [],
            span: 126..180,
        },
    ],
}

== types ==
[E1015] Type Error: in `main`: cannot negate an unsigned `U64` value; unary minus is defined on `Int`, `I64`, and `Float`
   ╭─[ <source>:4:11 ]
   │
 4 │   let x = -5u64
   │           ──┬──  
   │             ╰──── in `main`: cannot negate an unsigned `U64` value; unary minus is defined on `Int`, `I64`, and `Float`
───╯
