tests/snapshots/snapshots__pipeline@no_alloc_callee.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/no_alloc_callee.pr
---
== tokens ==
VOpen Type UIdent("Box") Eq UIdent("Box") LParen KwInt RParen VSemi Fn Ident("mk") LParen Ident("x") Colon KwInt RParen Colon UIdent("Box") Eq UIdent("Box") LParen Ident("x") RParen VSemi Fn Ident("top") LParen Ident("x") Colon KwInt RParen Colon UIdent("Box") At Ident("noalloc") Eq Ident("mk") LParen Ident("x") RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Box",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Box",
                    args: [
                        Int,
                    ],
                    fields: None,
                    span: 232..235,
                },
            ],
            deriving: [],
            newtype: false,
            span: 221..240,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "mk",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Con(
                    "Box",
                    [],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "Box",
                        ),
                        span: 265..268,
                    },
                    [
                        Spanned {
                            node: Var(
                                "x",
                            ),
                            span: 269..270,
                        },
                    ],
                ),
                span: 265..271,
            },
            wheres: [],
            span: 242..271,
        },
        Decl {
            name: "top",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Con(
                    "Box",
                    [],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "mk",
                        ),
                        span: 307..309,
                    },
                    [
                        Spanned {
                            node: Var(
                                "x",
                            ),
                            span: 310..311,
                        },
                    ],
                ),
                span: 307..312,
            },
            wheres: [],
            no_alloc: true,
            span: 273..312,
        },
    ],
}

== types ==
mk : (Int) -> Box
top : (Int) -> Box

== core (cbpv) ==
fn mk(x) =
  return x to t@0
  return Box(t@0)
fn top(x) =
  return x to t@1
  mk(t@1)

== fip ==
[E6076] Type Error: allocation certificate `@ noalloc` failed for function `top`: in `top`, call to `mk` may allocate (`mk` has no zero-allocation certificate)
   ╭─[ <source>:8:1 ]
   │
 8 │ fn top(x : Int) : Box @ noalloc = mk(x)
   │ ───────────────────┬───────────────────  
   │                    ╰───────────────────── allocation certificate `@ noalloc` failed for function `top`: in `top`, call to `mk` may allocate (`mk` has no zero-allocation certificate)
───╯
