tests/snapshots/snapshots__pipeline@no_alloc_fresh.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/no_alloc_fresh.pr
---
== tokens ==
VOpen Type UIdent("Box") Eq UIdent("Box") LParen KwInt RParen VSemi Fn Ident("fresh") LParen Ident("x") Colon KwInt RParen Colon UIdent("Box") At Ident("noalloc") Eq UIdent("Box") LParen Ident("x") RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Box",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Box",
                    args: [
                        Int,
                    ],
                    fields: None,
                    span: 193..196,
                },
            ],
            deriving: [],
            newtype: false,
            span: 182..201,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "fresh",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Con(
                    "Box",
                    [],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "Box",
                        ),
                        span: 239..242,
                    },
                    [
                        Spanned {
                            node: Var(
                                "x",
                            ),
                            span: 243..244,
                        },
                    ],
                ),
                span: 239..245,
            },
            wheres: [],
            no_alloc: true,
            span: 203..245,
        },
    ],
}

== types ==
fresh : (Int) -> Box

== core (cbpv) ==
fn fresh(x) =
  return x to t@0
  return Box(t@0)

== fip ==
[E6076] Type Error: allocation certificate `@ noalloc` failed for function `fresh`: in `fresh`, constructor `Box` may allocate a fresh cell
   ╭─[ <source>:6:1 ]
   │
 6 │ fn fresh(x : Int) : Box @ noalloc = Box(x)
   │ ─────────────────────┬────────────────────  
   │                      ╰────────────────────── allocation certificate `@ noalloc` failed for function `fresh`: in `fresh`, constructor `Box` may allocate a fresh cell
───╯
